--- a/index.html
+++ b/index.html
@@ -158,5 +158,32 @@ newRound();
 
 </body>
 </html>
+<script>
+const bgm = document.getElementById("bgm");
 
+document.addEventListener("click", () => {
+  bgm.volume = 0.5;
+  bgm.play();
+}, { once:true });
+
+function toggleMusic(){
+  if(bgm.paused){
+    bgm.play();
+  }else{
+    bgm.pause();
+  }
+}
+
+function setVolume(v){
+  bgm.volume = v;
+}
+</script>
+<audio id="bgm" loop>
+  <source src="lagu.mp3" type="audio/mpeg">
+</audio>
+
+<div style="position:fixed;bottom:15px;right:15px;z-index:999;">
+  <button class="btn" onclick="toggleMusic()">🎵 Play / Pause</button>
+  <input type="range" min="0" max="1" step="0.01" value="0.5" oninput="setVolume(this.value)">
+</div>
 
